--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
   "name": "code-analyzer",
   "version": "1.0.0",
-  "description": "Analyze your code using ChatGPT!",
-  "main": "index.js",
+  "description": "Code Analyzer with ChatGPT interaction",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/renoirlucena/code-analyzer.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/renoirlucena/code-analyzer/issues"
-  },
-  "homepage": "https://github.com/renoirlucena/code-analyzer#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "unzipper": "^0.10.14"
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "unzipper": "^0.10.11"
   }
 }
