--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "code-analyzer",
   "version": "1.0.0",
-  "description": "Code Analyzer with ChatGPT interaction",
+  "description": "A simple tool to analyze code using ChatGPT.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1",
-    "unzipper": "^0.10.11"
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
+    "unzipper": "^0.10.14"
   }
 }
